// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbWeb renders a default data 1`] = `
<Breadcrumb
  className="BreadcrumbWebTest"
  separator="-"
/>
`;

exports[`BreadcrumbWeb renders a default separator 1`] = `
<Breadcrumb
  className="BreadcrumbWebTest"
  separator=":"
>
  <BreadcrumbItem
    key="1"
    onClick={[Function]}
  >
    <a
      href="javascript:;"
    >
      一级菜单
    </a>
  </BreadcrumbItem>
  <BreadcrumbItem
    key="2"
    onClick={[Function]}
  >
    <a
      href="javascript:;"
    >
      二级菜单
    </a>
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`BreadcrumbWeb renders as a breadcrumb 1`] = `
<Breadcrumb
  className="BreadcrumbWebTest"
  separator="-"
>
  <BreadcrumbItem
    key="1"
    onClick={[Function]}
  >
    <a
      href="javascript:;"
    >
      一级菜单
    </a>
  </BreadcrumbItem>
  <BreadcrumbItem
    key="2"
    onClick={[Function]}
  >
    <a
      href="javascript:;"
    >
      二级菜单
    </a>
  </BreadcrumbItem>
</Breadcrumb>
`;
